force-app/main/default/objects/SSP_PicklistConversion_Configurations__mdt/SSP_PicklistConversion_Configurations__mdt.object-meta.xml
<CustomObject>
    <description>This Custom metadata is used to Configure the picklist value conversion where we have single label with more than two keys</description>
    <label>SSP Picklist Conversion Configurations</label>
    <pluralLabel>SSP Picklist Conversion Configurations</pluralLabel>
</CustomObject>