force-app/main/default/objects/SSP_PicklistConversion_Configurations__mdt/fields/ControllingFieldCode__c.field-meta.xml
<CustomField>
    <fullName>ControllingFieldCode__c</fullName>
    <description>This field is used to store controlling field code for picklist conversion</description>
    <label>Controlling Field Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>