force-app/main/default/objects/SSP_PicklistConversion_Configurations__mdt/fields/IEESReferenceKey__c.field-meta.xml
<CustomField>
    <fullName>IEESReferenceKey__c</fullName>
    <description>This field is used to store IEES reference table entry key</description>
    <label>IEES Reference Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>