force-app/main/default/objects/SSP_PicklistConversion_Configurations__mdt/fields/SalesforcePicklistKey__c.field-meta.xml
<CustomField>
    <fullName>SalesforcePicklistKey__c</fullName>
    <description>This field is used to store the salesforce picklist value</description>
    <label>Salesforce Picklist Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>