force-app/main/default/objects/SSP_PicklistConversion_Configurations__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>This field is used to store the Source where these conversions are required</description>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>